# gw-protocol-sdk

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  requirements-docs.txt
cmake/: api_exports.txt
doc/: 104_101动态库接口设计.md  README.md  文件分类记录.md  配电终端统一运维工具 协议层动态库API接口文档 - 0415.docx
doc/api/: dtu_unified_maintenance_sdk_api_design.md  gw_protocol_sdk_api_design.md  配电终端统一运维工具协议层动态库API接口文档 - 0420.docx
doc/scripts/: add_pdf_outline.py  build_doc_docx.py  build_doc_pdf.sh  render_mermaid_markdown.py  validate_pdf_export.py
doc/tools/pdf/: markdown-pdf.css
include/: gw_iec101.h  gw_iec104.h  gw_m101.h  gw_protocol_sdk.h
scripts/: add_pdf_outline.py  build_doc_pdf.sh  render_mermaid_markdown.py
src/core/: session.cpp  session.hpp
src/exports/: iec101_api.cpp  iec104_api.cpp  m101_api.cpp
tests/: test_lifecycle.cpp  test_main.cpp
tools/: check_api_exports.cpp
tools/pdf/: markdown-pdf.css  mermaid.css  puppeteer-config.json
